--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
         </header>
 
         <!--Fin de Cabecera-->
-        <div id="box-content">
+        <div id="box__content">
 
             <!--Lateral staf-->
-            <aside class="staff">
+            <aside class="staff__caja">
 
-                <div class="staff__card">
+                <div class="staff__nosotros">
 
-                    <div class="name">
+                    <div class="name__staff">
                         <h2>Hector Luis</h2>
                     </div>
 
@@ -63,9 +63,9 @@
 
                 </div>
 
-                <div class="staff__card">
+                <div class="staff__nosotros">
 
-                    <div class="name">
+                    <div class="name__staff">
                         <h2>Jevy Cantina</h2>
                     </div>
 
@@ -83,9 +83,9 @@
             <!--Fin lateral staf-->
 
             <!--Inicio de Articulo-->
-            <article class="articles__nosotros">
+            <article class="articles__caja">
                 <h1>Nosotros</h1>
-                <section class="article">
+                <section class="article__nosotros">
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos possimus commodi beatae
                         non
@@ -101,7 +101,7 @@
                         perferendis dolore ex fugit reiciendis.
                     </p>
                 </section>
-                <section class="article">
+                <section class="article__nosotros">
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos possimus commodi beatae
                         non
@@ -155,10 +155,10 @@
         <!--Fin de Footer-->
 
     </main>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
 </body>
 
 </html>
