mensaje de confirmación

--- a/index.html
+++ b/index.html
@@ -15,36 +15,54 @@
     <main id="padre__grid">
         <!--Inicio Cabecera-->
 
-        <header id="header">
-            <div class="img-logo">
-                <a href="https://www.instagram.com/onroadmb/" target="_blanc"> <img src="img/logoblack.png"></a>
-            </div>
+        <header id="header" class="container-fluid">
+           
+
+            <nav class=" navegacion navbar  navbar-expand-sm navbar-light w-100">
+                <div class="container-fluid">
+                    <div class="img-logo">
+                        <a href="https://www.instagram.com/onroadmb/" target="_blanc"> <img src="img/logoblack.png" class="d-inline-block align-text-top"></a>
+                    </div>
+                    <button class=" boton__navegacion navbar-toggler navbar-brand" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav ms-3">
+
+                            <ul>
+                                <li class="nav-item">
+                                    <a href="index.html">Nosotros</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/pages/servicio.html">Servicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/pages/barras.html">Barras</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/pages/cocteles.html">Cocteles</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/pages/contacto.html">Contacto</a>
+                                </li>
+                            </ul>
 
 
-            <nav class="navegacion">
-                <ul>
-                    <li>
-                        <a href="index.html">Nosotros</a>
-                    </li>
-                    <li>
-                        <a href="/pages/servicio.html">Servicio</a>
-                    </li>
-                    <li>
-                        <a href="/pages/barras.html">Barras</a>
-                    </li>
-                    <li>
-                        <a href="/pages/cocteles.html">Cocteles</a>
-                    </li>
-                    <li>
-                        <a href="/pages/contacto.html">Contacto</a>
-                    </li>
-                </ul>
+
+
+                        </div>
+                    </div>
+                </div>
             </nav>
-            <div class="clearfix"></div>
+
+
+
         </header>
 
         <!--Fin de Cabecera-->
-        <div id="box__content">
+        <div id="box__content" class="container-fluid">
 
             <!--Lateral staf-->
             <aside class="staff__caja">
