agregada barra nav a cocteles

--- a/pages/cocteles.html
+++ b/pages/cocteles.html
@@ -15,32 +15,51 @@
     <main id="padre__grid">
         <!--Inicio Cabecera-->
 
-        <header id="header">
-            <div class="img-logo">
-                <a href="https://www.instagram.com/onroadmb/" target="_blanc"> <img src="../img/logoblack.png"></a>
-            </div>
+        <header id="header" class="container-fluid">
 
 
-            <nav class="navegacion">
-                <ul>
-                    <li>
-                        <a href="../index.html">Nosotros</a>
-                    </li>
-                    <li>
-                        <a href="servicio.html">Servicio</a>
-                    </li>
-                    <li>
-                        <a href="barras.html">Barras</a>
-                    </li>
-                    <li>
-                        <a href="cocteles.html">Cocteles</a>
-                    </li>
-                    <li>
-                        <a href="contacto.html">Contacto</a>
-                    </li>
-                </ul>
+            <nav class=" navegacion navbar  navbar-expand-sm navbar-light w-100">
+                <div class="container-fluid">
+                    <div class="img-logo">
+                        <a href="https://www.instagram.com/onroadmb/" target="_blanc"> <img src="../img/logoblack.png"
+                                class="d-inline-block align-text-top"></a>
+                    </div>
+                    <button class=" boton__navegacion navbar-toggler navbar-brand" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav ms-3">
+
+                            <ul>
+                                <li class="nav-item">
+                                    <a href="../index.html">Nosotros</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/pages/servicio.html">Servicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/pages/barras.html">Barras</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/pages/cocteles.html">Cocteles</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/pages/contacto.html">Contacto</a>
+                                </li>
+                            </ul>
+
+
+
+
+                        </div>
+                    </div>
+                </div>
             </nav>
-            <div class="clearfix"></div>
+
+
+
         </header>
 
         <!--Fin de Cabecera-->
@@ -50,30 +69,35 @@
             <p class="subtittle">Conoce nuestra gran variedad de cocteles</p>
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                  <div class=" imagen_1 carousel-item active">
-                    <img src="/img/coctel1.jpg" class="d-block w-100" alt="coctel1">
-                  </div>
-                  <div class=" imagen_2 carousel-item">
-                    <img src="/img/coctel2.jpg" class="d-block w-100" alt="coctel2">
-                  </div>
-                  <div class="imagen_3 carousel-item">
-                    <img src="/img/cocteles.jpg" class="d-block w-100" alt="coctel3">
-                  </div>
+                    <div class=" imagen_1 carousel-item active">
+                        <img src="/img/coctel1.jpg" class="d-block w-100" alt="coctel1">
+                    </div>
+                    <div class=" imagen_2 carousel-item">
+                        <img src="/img/coctel2.jpg" class="d-block w-100" alt="coctel2">
+                    </div>
+                    <div class="imagen_3 carousel-item">
+                        <img src="/img/cocteles.jpg" class="d-block w-100" alt="coctel3">
+                    </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
                 </button>
-              </div>
+            </div>
             <div class="cocteles-wrap">
 
 
