--- a/pages/barras.html
+++ b/pages/barras.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/styles.css" />
     <title>Barras On Road</title>
 </head>
@@ -13,32 +15,51 @@
     <main id="padre__grid">
         <!--Inicio Cabecera-->
 
-        <header id="header">
-            <div class="img-logo">
-                <a href="https://www.instagram.com/onroadmb/" target="_blanc"> <img src="../img/logoblack.png"></a>
-            </div>
+        <header id="header" class="container-fluid">
 
 
-            <nav class="navegacion">
-                <ul>
-                    <li>
-                        <a href="../index.html">Nosotros</a>
-                    </li>
-                    <li>
-                        <a href="servicio.html">Servicio</a>
-                    </li>
-                    <li>
-                        <a href="barras.html">Barras</a>
-                    </li>
-                    <li>
-                        <a href="cocteles.html">Cocteles</a>
-                    </li>
-                    <li>
-                        <a href="contacto.html">Contacto</a>
-                    </li>
-                </ul>
+            <nav class=" navegacion navbar  navbar-expand-sm navbar-light w-100">
+                <div class="container-fluid">
+                    <div class="img-logo">
+                        <a href="https://www.instagram.com/onroadmb/" target="_blanc"> <img src="../img/logoblack.png"
+                                class="d-inline-block align-text-top"></a>
+                    </div>
+                    <button class=" boton__navegacion navbar-toggler navbar-brand" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav ms-3">
+
+                            <ul>
+                                <li class="nav-item">
+                                    <a href="../index.html">Nosotros</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/pages/servicio.html">Servicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/pages/barras.html">Barras</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/pages/cocteles.html">Cocteles</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/pages/contacto.html">Contacto</a>
+                                </li>
+                            </ul>
+
+
+
+
+                        </div>
+                    </div>
+                </div>
             </nav>
-            <div class="clearfix"></div>
+
+
+
         </header>
 
         <!--Fin de Cabecera-->
@@ -47,7 +68,7 @@
             <h1>Barras</h1>
             <p>Contamos con alta calidad en Modulos de Barra</p>
             <div class="box-barras">
-                
+
                 <div class="img-barra">
                     <img src="/img/barramovil.jpg" alt="barra-modulo">
                 </div>
@@ -106,7 +127,9 @@
         <!--Fin de Footer-->
 
     </main>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
