agregado de mixin/maps/extends y pagina contacto

--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
         <!--Inicio Cabecera-->
 
         <header id="header" class="container-fluid">
-           
+
 
             <nav class=" navegacion navbar  navbar-expand-sm navbar-light w-100">
                 <div class="container-fluid">
                     <div class="img-logo">
-                        <a href="https://www.instagram.com/onroadmb/" target="_blanc"> <img src="img/logoblack.png" class="d-inline-block align-text-top"></a>
+                        <a href="https://www.instagram.com/onroadmb/" target="_blanc"> <img src="img/logoblack.png"
+                                class="d-inline-block align-text-top"></a>
                     </div>
-                    <button class=" boton__navegacion navbar-toggler navbar-brand" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                        aria-label="Toggle navigation">
+                    <button class=" boton__navegacion navbar-toggler navbar-brand" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -106,34 +107,19 @@
                 <h1>Nosotros</h1>
                 <section class="article__nosotros">
                     <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos possimus commodi beatae
-                        non
-                        adipisci. Quis praesentium ipsa maiores. Nemo dignissimos facere nobis quasi provident aliquam
-                        perferendis dolore ex fugit reiciendis.
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos possimus commodi beatae
-                        non
-                        adipisci. Quis praesentium ipsa maiores. Nemo dignissimos facere nobis quasi provident aliquam
-                        perferendis dolore ex fugit reiciendis.
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos possimus commodi beatae
-                        non
-                        adipisci. Quis praesentium ipsa maiores. Nemo dignissimos facere nobis quasi provident aliquam
-                        perferendis dolore ex fugit reiciendis.
+                        Quienes hayan participado de la #BONVIVANTEXPERIENCE, podrán distinguir en nosotros la
+                        personalización, artesanalidad, valorización del detalle, innovación, imagen, y vocación de
+                        servicio por parte de todos los integrantes de nuestra organización.
                     </p>
                 </section>
                 <section class="article__nosotros">
                     <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos possimus commodi beatae
-                        non
-                        adipisci. Quis praesentium ipsa maiores. Nemo dignissimos facere nobis quasi provident aliquam
-                        perferendis dolore ex fugit reiciendis.
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos possimus commodi beatae
-                        non
-                        adipisci. Quis praesentium ipsa maiores. Nemo dignissimos facere nobis quasi provident aliquam
-                        perferendis dolore ex fugit reiciendis.
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos possimus commodi beatae
-                        non
-                        adipisci. Quis praesentium ipsa maiores. Nemo dignissimos facere nobis quasi provident aliquam
-                        perferendis dolore ex fugit reiciendis.
+                        En cada evento ofrecemos un servicio ágil y personalizado, donde a través de la gran variedad de
+                        recursos disponibles, y la expertise de los más prestigiosos bartenders, logramos al instante
+                        autorías amoldadas al gusto individual de cada invitado que se acerque a la barra. Free Style
+                        Open Bar.
+                        Nuestros exquisitos cócteles son elaborados con las más exclusivas bebidas, y el diseño de la
+                        carta es llevado adelante por los profesionales más creativos del país
                     </p>
                 </section>
 
