--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/scss/estilos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/styles.css" />
     <title>Contacto On Road</title>
 </head>
@@ -45,47 +48,61 @@
         <!--Formulario de contacto-->
         <section id="contacto">
             <h1>Contactanos!</h1>
-            <p>No dudes en enviarnos tu consulta</p>
-            <div id="box-contacto">
-                <h3>Hector Luis</h3>
-                <spam>555-000</spam>
-                <h3>Jevy Cantina</h3>
-                <spam>555-000</spam>
-            </div>
-            <h3>O envianos tu consulta via Mail</h3>
-            <p>Nosotros nos ponemos en contacto para organizar tu evento </p>
-            <p>Mail:onroadmobilebar@gmail.com</p>
-            <form id="consulta">
-                <input type="text" name="name" placeholder="Nombre y Apellido">
-                <input type="email" name="email" placeholder="Email">
-                <input type="number" name="number" placeholder="Telefono">
+            <p class="primerEstilo">No dudes en enviarnos tu consulta</p>
+            <div class="contenedor_contacto">
 
-                <input type="text" placeholder="Cantidad de Invitados Adultos">
+                <div class="box-contacto">
+                    <h2 class="h2conMixin">Mensaje Directo</h2>
+                    <div class="contenedor_contacto">
+                        <div class="nombre_tel">
+                            <h3>Hector Luis</h3>
+                            <spam>555-000</spam>
+                        </div>
+                        <div class="nombre_tel">
+                            <h3>Jevy Cantina</h3>
+                            <spam>555-000</spam>
+                        </div>
+                    </div>
+                    <p class="segundoEstilo">Seguinos en nuestras Redes</p>
+                </div>
 
-                <input type="text" placeholder="Cantidad de invitados Menores">
+                <div class="consulta">
+                    <h3> Envianos tu consulta via Mail</h3>
+                    
+                    <form >
+                        
+                        <input type="text" name="name" placeholder="Nombre y Apellido">
+                        <input type="email" name="email" placeholder="Email">
+                        <input type="number" name="number" placeholder="Telefono">
 
-                <input type="text" placeholder="Lugar del Evento">
+                        <input type="text" placeholder="Cantidad de Invitados Adultos">
 
-                <input type="text" placeholder="Fecha del Evento">
+                        <input type="text" placeholder="Cantidad de invitados Menores">
 
-                <input type="text" placeholder="Tipo de Evento">
+                        <input type="text" placeholder="Lugar del Evento">
 
-                <input type="text" placeholder="Horario de Comienzo y Fin">
+                        <input type="text" placeholder="Fecha del Evento">
 
-                <textarea placeholder="Describi tu Evento"></textarea>
+                        <input type="text" placeholder="Tipo de Evento">
 
-                <input type="submit" value="Solicitar cotizacion">
+                        <input type="text" placeholder="Horario de Comienzo y Fin">
+
+                        <textarea placeholder="Describi tu Evento"></textarea>
+
+                        <input class="boton" type="submit" value="Solicitar cotizacion">
 
 
-            </form>
+                    </form>
+                </div>
 
-            <!--Fin de Formulario de contacto-->
-            <div class="box-ubicacion">
-                <h2>Nos encontramos en</h2>
-                <div class="map">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.016887889548!2d-58.38375908544157!3d-34.60373446500467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses!2sar!4v1638229199214!5m2!1ses!2sar"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <!--Fin de Formulario de contacto-->
+                <div class="box-ubicacion">
+                    <h2>Nos encontramos en</h2>
+                    <div class="map">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.016887889548!2d-58.38375908544157!3d-34.60373446500467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses!2sar!4v1638229199214!5m2!1ses!2sar"
+                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
                 </div>
             </div>
         </section>
