--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,32 +16,51 @@
     <main id="padre__grid">
         <!--Inicio Cabecera-->
 
-        <header id="header">
-            <div class="img-logo">
-                <a href="https://www.instagram.com/onroadmb/" target="_blanc"> <img src="../img/logoblack.png"></a>
-            </div>
+        <header id="header" class="container-fluid">
 
 
-            <nav class="navegacion">
-                <ul>
-                    <li>
-                        <a href="../index.html">Nosotros</a>
-                    </li>
-                    <li>
-                        <a href="servicio.html">Servicio</a>
-                    </li>
-                    <li>
-                        <a href="barras.html">Barras</a>
-                    </li>
-                    <li>
-                        <a href="cocteles.html">Cocteles</a>
-                    </li>
-                    <li>
-                        <a href="contacto.html">Contacto</a>
-                    </li>
-                </ul>
+            <nav class=" navegacion navbar  navbar-expand-sm navbar-light w-100">
+                <div class="container-fluid">
+                    <div class="img-logo">
+                        <a href="https://www.instagram.com/onroadmb/" target="_blanc"> <img src="../img/logoblack.png"
+                                class="d-inline-block align-text-top"></a>
+                    </div>
+                    <button class=" boton__navegacion navbar-toggler navbar-brand" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav ms-3">
+
+                            <ul>
+                                <li class="nav-item">
+                                    <a href="../index.html">Nosotros</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/pages/servicio.html">Servicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/pages/barras.html">Barras</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/pages/cocteles.html">Cocteles</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/pages/contacto.html">Contacto</a>
+                                </li>
+                            </ul>
+
+
+
+
+                        </div>
+                    </div>
+                </div>
             </nav>
-            <div class="clearfix"></div>
+
+
+
         </header>
 
         <!--Fin de Cabecera-->
@@ -68,9 +87,9 @@
 
                 <div class="consulta">
                     <h3> Envianos tu consulta via Mail</h3>
-                    
-                    <form >
-                        
+
+                    <form>
+
                         <input type="text" name="name" placeholder="Nombre y Apellido">
                         <input type="email" name="email" placeholder="Email">
                         <input type="number" name="number" placeholder="Telefono">
@@ -139,6 +158,10 @@
         <!--Fin de Footer-->
 
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
