sacado de loren en las paginas

--- a/pages/barras.html
+++ b/pages/barras.html
@@ -74,21 +74,9 @@
                 </div>
                 <div class="reseña-barra">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque ipsa necessitatibus
-                        consequatur
-                        facere sequi at, inventore, aliquam rem quaerat, voluptates cum perferendis unde. Rerum quis
-                        fugit
-                        culpa aliquam, numquam doloremque?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque ipsa necessitatibus
-                        consequatur
-                        facere sequi at, inventore, aliquam rem quaerat, voluptates cum perferendis unde. Rerum quis
-                        fugit
-                        culpa aliquam, numquam doloremque?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque ipsa necessitatibus
-                        consequatur
-                        facere sequi at, inventore, aliquam rem quaerat, voluptates cum perferendis unde. Rerum quis
-                        fugit
-                        culpa aliquam, numquam doloremque?
+                        Somos fabricantes de todas nuestras barras ,
+                        estamos continuamente creando nuevos diseños
+                        para adecuarlas perfectamente con tu evento.
                     </p>
                 </div>
             </div>
