--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </header>
 
         <!--Fin de Cabecera-->
-        <div id="box__content" class="container-fluid">
+        <div id="box__content">
 
             <!--Lateral staf-->
             <aside class="staff__caja">
@@ -109,7 +109,7 @@
                 <h1>Nosotros</h1>
                 <section class="article__nosotros">
                     <p>
-                        Quienes hayan participado de la #BONVIVANTEXPERIENCE, podrán distinguir en nosotros la
+                        Quienes hayan participado de la #OnRoadExperience, podrán distinguir en nosotros la
                         personalización, artesanalidad, valorización del detalle, innovación, imagen, y vocación de
                         servicio por parte de todos los integrantes de nuestra organización.
                     </p>
