--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Barra Movil de cocteleria profesional">
     <meta name="keywords" content="Cocteleria,Cocteles,barramovil,barra-modulo,Servicio">
-    <link rel="stylesheet" href="/scss/estilos.css">
+    <link rel="stylesheet" href="scss/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <title>On Road Barras Moviles</title>
 </head>
 
@@ -40,16 +40,16 @@
                                     <a href="index.html">Nosotros</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/pages/servicio.html">Servicio</a>
+                                    <a href="pages/servicio.html">Servicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/pages/barras.html">Barras</a>
+                                    <a href="pages/barras.html">Barras</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/pages/cocteles.html">Cocteles</a>
+                                    <a href="pages/cocteles.html">Cocteles</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/pages/contacto.html">Contacto</a>
+                                    <a href="pages/contacto.html">Contacto</a>
                                 </li>
                             </ul>
 
@@ -80,7 +80,7 @@
                     <div class="img-staff">
                         <!--Imagen perfil-->
                         <a href="https://www.instagram.com/palmagic_/?hl=es-la" target="_blanck"><img
-                                src="/img/hector.jpg" alt="Hector Luis Bartender"></a>
+                                src="img/hector.jpg" alt="Hector Luis Bartender"></a>
                     </div>
 
                 </div>
@@ -94,7 +94,7 @@
                     <div class="img-staff">
                         <!--Imagen perfil-->
                         <a href="https://www.instagram.com/jevycantina/?hl=es-la" target="_blanck"><img
-                                src="/img/jevy.jpg" alt="Jevy Cantina Bartender"></a>
+                                src="img/jevy.jpg" alt="Jevy Cantina Bartender"></a>
 
                     </div>
 
@@ -134,7 +134,7 @@
         <footer id="footer">
 
             <div class="img-footer">
-                <a href="https://www.instagram.com/onroadmb/?hl=es-la" target="_blanck"><img src="/img/logowhite.jpeg"
+                <a href="https://www.instagram.com/onroadmb/?hl=es-la" target="_blanck"><img src="img/logowhite.jpeg"
                         alt="Logo On Road White"></a>
             </div>
             <div class="menu-footer">
@@ -144,16 +144,16 @@
                         <a href="index.html">Nosotros</a>
                     </li>
                     <li>
-                        <a href="/pages/servicio.html">Servicio</a>
+                        <a href="pages/servicio.html">Servicio</a>
                     </li>
                     <li>
-                        <a href="/pages/barras.html">Barras</a>
+                        <a href="pages/barras.html">Barras</a>
                     </li>
                     <li>
-                        <a href="/pages/cocteles.html">Cocteles</a>
+                        <a href="pages/cocteles.html">Cocteles</a>
                     </li>
                     <li>
-                        <a href="/pages/contacto.html">Contacto</a>
+                        <a href="pages/contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
