--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Barra Movil de cocteleria profesional">
     <meta name="keywords" content="Cocteleria,Cocteles,barramovil,barra-modulo,Servicio,Contacto-barra,Cocktail">
-    <link rel="stylesheet" href="/scss/estilos.css">
+    <link rel="stylesheet" href="../scss/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="../css/styles.css" />
     <title>Contacto On Road</title>
 </head>
 
@@ -40,16 +40,16 @@
                                     <a href="../index.html">Nosotros</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/pages/servicio.html">Servicio</a>
+                                    <a href="servicio.html">Servicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/pages/barras.html">Barras</a>
+                                    <a href="barras.html">Barras</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/pages/cocteles.html">Cocteles</a>
+                                    <a href="cocteles.html">Cocteles</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/pages/contacto.html">Contacto</a>
+                                    <a href="contacto.html">Contacto</a>
                                 </li>
                             </ul>
 
@@ -132,26 +132,26 @@
         <footer id="footer">
 
             <div class="img-footer">
-                <a href="https://www.instagram.com/onroadmb/?hl=es-la" target="_blanck"><img src="/img/logowhite.jpeg"
+                <a href="https://www.instagram.com/onroadmb/?hl=es-la" target="_blanck"><img src="../img/logowhite.jpeg"
                         alt="Logo On Road White"></a>
             </div>
             <div class="menu-footer">
 
                 <ul>
                     <li>
-                        <a href="/index.html">Nosotros</a>
+                        <a href="../index.html">Nosotros</a>
                     </li>
                     <li>
-                        <a href="/pages/servicio.html">Servicio</a>
+                        <a href="servicio.html">Servicio</a>
                     </li>
                     <li>
-                        <a href="/pages/barras.html">Barras</a>
+                        <a href="barras.html">Barras</a>
                     </li>
                     <li>
-                        <a href="/pages/cocteles.html">Cocteles</a>
+                        <a href="cocteles.html">Cocteles</a>
                     </li>
                     <li>
-                        <a href="/pages/contacto.html">Contacto</a>
+                        <a href="contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
