--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Cocteleria,Cocteles,barramovil,barra-modulo,Servicio">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="../css/styles.css" />
     <title>Servicios On Road</title>
 </head>
 
@@ -39,16 +39,16 @@
                                     <a href="../index.html">Nosotros</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/pages/servicio.html">Servicio</a>
+                                    <a href="servicio.html">Servicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/pages/barras.html">Barras</a>
+                                    <a href="barras.html">Barras</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/pages/cocteles.html">Cocteles</a>
+                                    <a href="cocteles.html">Cocteles</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/pages/contacto.html">Contacto</a>
+                                    <a href="contacto.html">Contacto</a>
                                 </li>
                             </ul>
 
@@ -120,7 +120,7 @@
 
 
             <div class="img-servicio">
-                <img src="/img/coctelrojo.jpg" alt="Foto Bartender">
+                <img src="../img/coctelrojo.jpg" alt="Foto Bartender">
             </div>
 
 
@@ -136,26 +136,26 @@
         <footer id="footer">
 
             <div class="img-footer">
-                <a href="https://www.instagram.com/onroadmb/?hl=es-la" target="_blanck"><img src="/img/logowhite.jpeg"
+                <a href="https://www.instagram.com/onroadmb/?hl=es-la" target="_blanck"><img src="../img/logowhite.jpeg"
                         alt="Logo On Road White"></a>
             </div>
             <div class="menu-footer">
 
                 <ul>
                     <li>
-                        <a href="/index.html">Nosotros</a>
+                        <a href="../index.html">Nosotros</a>
                     </li>
                     <li>
-                        <a href="/pages/servicio.html">Servicio</a>
+                        <a href="servicio.html">Servicio</a>
                     </li>
                     <li>
-                        <a href="/pages/barras.html">Barras</a>
+                        <a href="barras.html">Barras</a>
                     </li>
                     <li>
-                        <a href="/pages/cocteles.html">Cocteles</a>
+                        <a href="cocteles.html">Cocteles</a>
                     </li>
                     <li>
-                        <a href="/pages/contacto.html">Contacto</a>
+                        <a href="contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
